<?xml version="1.0"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
    
	<name>Sakai basic tool pom</name>
	<groupId>org.sakaiproject.purepoms</groupId>
	<artifactId>sakai-basic-tool</artifactId>
	<packaging>pom</packaging>
	<version>2.8.8-SNAPSHOT</version>

	<organization>
		<name>Sakai Project</name>
		<url>http://sakaiproject.org/</url>
	</organization>
    
	<issueManagement>
		<system>jira</system>
		<url>http://jira.sakaiproject.org/browse/SAK</url>
	</issueManagement>
    
	<prerequisites>
		<maven>2.2.1</maven>
	</prerequisites>
    
    <properties>
        <sakai.kernel.version>1.2.9</sakai.kernel.version>
    </properties>
    
	<scm>
		<connection>scm:svn:https://source.sakaiproject.org/svn/pure-poms/tags/purepoms-2.8.4/sakai-basic-tool</connection>
		<developerConnection>scm:svn:https://source.sakaiproject.org/svn/pure-poms/tags/purepoms-2.8.4/sakai-basic-tool</developerConnection>
		<url>https://source.sakaiproject.org/svn/pure-poms/tags/purepoms-2.8.4/sakai-basic-tool</url>
	</scm>

	<distributionManagement>
		<downloadUrl>http://source.sakaiproject.org/maven2/</downloadUrl>
		<snapshotRepository>
			<uniqueVersion>false</uniqueVersion>
			<id>sakai-maven-snapshots-scp</id>
			<name>Sakai snapshot Repo</name>
			<url>scpexe://source.sakaiproject.org/var/www/html/maven2-snapshots</url>
			<layout>default</layout>
		</snapshotRepository>
		<repository>
			<uniqueVersion>false</uniqueVersion>
			<id>sakai-maven2-scp</id>
			<name>Sakai maven2 repository</name>
			<url>scpexe://source.sakaiproject.org/var/www/html/maven2</url>
			<layout>default</layout>
		</repository>
	</distributionManagement>
    
    <pluginRepositories>
        <pluginRepository>
            <id>maven2-central-repo</id>
            <name>Maven2 Central Repo</name>
            <url>http://repo1.maven.org/maven2/</url>
            <releases>
                <enabled>true</enabled>
            </releases>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </pluginRepository>
        <pluginRepository>
            <id>Sakai Plugin Repo</id>
            <url>http://source.sakaiproject.org/maven2</url>
            <releases>
                <enabled>true</enabled>
            </releases>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </pluginRepository>
    </pluginRepositories>

    <repositories>
        <repository>
            <id>sakai-maven2-snapshots</id>
            <name>Sakai Maven Repo Snapshots</name>
            <layout>default</layout>
            <url>http://source.sakaiproject.org/maven2-snapshots</url>
            <releases>
                <enabled>false</enabled>
            </releases>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>
        <repository>
            <id>sakai-maven2</id>
            <name>Sakai Maven Repository</name>
            <layout>default</layout>
            <url>http://source.sakaiproject.org/maven2</url>
            <releases>
                <enabled>true</enabled>
            </releases>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository> 
        <repository>
            <id>default</id>
            <name>Maven Repository Switchboard</name>
            <layout>default</layout>
            <url>http://repo1.maven.org/maven2</url>
            <releases>
                <enabled>true</enabled>
            </releases>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
    </repositories>
    
	<dependencyManagement>
		<dependencies>
			<dependency>
				<artifactId>kernel</artifactId>
				<groupId>org.sakaiproject</groupId>
				<version>${sakai.kernel.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			<dependency>
				<groupId>org.sakaiproject.kernel</groupId>
				<artifactId>sakai-kernel-util</artifactId>
				<version>${sakai.kernel.version}</version>
			</dependency>
			<dependency>
				<groupId>org.sakaiproject.kernel</groupId>
				<artifactId>test-harness</artifactId>
				<version>${sakai.kernel.version}</version>
			</dependency>
		</dependencies>
	</dependencyManagement>
    
	<dependencies>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.8.1</version>
			<scope>test</scope>
		</dependency>
	</dependencies>
    
	<build>
        <directory>target</directory>
        <outputDirectory>target/classes</outputDirectory>
        <finalName>${project.artifactId}-${project.version}
        </finalName>
        <testOutputDirectory>target/test-classes
        </testOutputDirectory>
        <sourceDirectory>src/java</sourceDirectory>
        <scriptSourceDirectory>src/webapp</scriptSourceDirectory>
        <testSourceDirectory>src/test</testSourceDirectory>
        <resources>
            <resource>
                <directory>${basedir}/src/java</directory>
                <excludes>
                    <exclude>**/*.java</exclude>
                </excludes>
            </resource>
            <resource>
                <directory>${basedir}/src/bundle</directory>
                <includes>
                    <include>**/*</include>
                </includes>
            </resource>
        </resources>
        <pluginManagement>
            <plugins>
                <plugin>
                    <inherited>true</inherited>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-assembly-plugin</artifactId>
                    <version>2.2.1</version>
                </plugin>
                <plugin>
                    <inherited>true</inherited>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>2.3.2</version>
                    <configuration>
                        <source>1.5</source>
                        <target>1.5</target>
                    </configuration>
                </plugin>
                <plugin>
                    <inherited>true</inherited>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-javadoc-plugin</artifactId>
                    <version>2.8</version>
                    <configuration>
                        <source>1.5</source>
                        <target>1.5</target>
                    </configuration>
                </plugin>
                <plugin>
                    <inherited>true</inherited>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-release-plugin</artifactId>
                    <version>2.2.1</version>
                    <configuration>
                        <tagbase>https://source.sakaiproject.org/svn-test/sakai/tags</tagbase>
                        <preparationGoals>clean verify install</preparationGoals>
                        <autoVersionSubmodules>true</autoVersionSubmodules>
                        <useReleaseProfile>true</useReleaseProfile>
                    </configuration>
                </plugin>
                <!-- maven-surefire-report-plugin 2.8+ requires maven-site-plugin 2.1+ -->
                <plugin>
                    <inherited>true</inherited>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-site-plugin</artifactId>
                    <version>2.2</version>
                </plugin>
                <plugin>
                    <inherited>true</inherited>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>2.8</version>
                    <configuration>
                        <systemProperties>
                            <!-- Pass through important service-integration 
                                test properties. -->
                            <property>
                                <name>maven.tomcat.home</name>
                                <value>${maven.tomcat.home}</value>
                            </property>
                            <property>
                                <name>test.sakai.home</name>
                                <value>${test.sakai.home}</value>
                            </property>
                        </systemProperties>
                    </configuration>
                </plugin>
                <plugin>
                    <inherited>true</inherited>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-war-plugin</artifactId>
                    <version>2.1.1</version>
                    <configuration>
                        <warSourceDirectory>${basedir}/src/webapp
                        </warSourceDirectory>
                    </configuration>
                </plugin>
                
                <!-- entitybroker release failed on this plugin so moved it out -->
                <!--
                <plugin>
                    <inherited>true</inherited>
                    <groupId>org.sakaiproject.maven.plugins</groupId>
                    <artifactId>sakai</artifactId>
                    <version>1.2.0</version>
                    <extensions>true</extensions>
                    <configuration>
                        <deployDirectory>${maven.tomcat.home}
                    </deployDirectory>
                        <warSourceDirectory>${basedir}/src/webapp
                    </warSourceDirectory>
                    </configuration>
                </plugin>
                -->
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <inherited>true</inherited>
                <groupId>org.sakaiproject.maven.plugins</groupId>
                <artifactId>sakai</artifactId>
                <version>1.2.0</version>
                <extensions>true</extensions>
                <configuration>
                    <deployDirectory>${maven.tomcat.home}</deployDirectory>
                    <warSourceDirectory>${basedir}/src/webapp</warSourceDirectory>
                </configuration>
            </plugin>
        </plugins>  
        
        <extensions> 
           <!-- Enable the use of external ssh for deploys --> 
            <extension> 
                <groupId>org.apache.maven.wagon</groupId> 
                <artifactId>wagon-ssh-external</artifactId> 
                <version>2.0</version> 
            </extension> 
		</extensions> 
		
    </build>

    <reporting>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>2.8</version>
                <configuration>
                    <debug>true</debug>
                    <links>
                        <link>http://download.oracle.com/javase/1.5.0/docs/api/</link>
                        <link>http://download.oracle.com/javase/6/docs/api/</link>
                    </links>
                    <breakiterator>true</breakiterator>
                    <verbose>false</verbose>
                    <aggregate>true</aggregate>  
                    <minmemory>168m</minmemory>
                    <maxmemory>1024m</maxmemory>
                    <additionalJOption>-J-Xms168m -J-Xmx1024m -J-XX:PermSize=128m -J-XX:NewSize=64m</additionalJOption>
                </configuration>
            </plugin>
            <plugin>
                <inherited>true</inherited>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-report-plugin</artifactId>
                <version>2.8</version>
            </plugin>
        </plugins>
    </reporting>
</project>
